--- a/Project.toml
+++ b/Project.toml
@@ -7,5 +7,12 @@ IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 TreeViews = "a2a6695c-b41b-5b7d-aed9-dbfdeacea5d7"
 
 [compat]
+IterTools = "1"
 TreeViews = "0.3"
 julia = "1"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
